--- a/courses.html
+++ b/courses.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 
 <!-- 
-  Theme Name: Enlight
-  Theme URL: https://probootstrap.com/enlight-free-education-responsive-bootstrap-website-template
-  Author: ProBootstrap.com
-  Author URL: https://probootstrap.com
-  License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
+
+  Author URL: https://horitio.com
+  License: Released for free under the Creative Commons Attribution 3.0 license (horitio.com/license)
 -->
 <html lang="en">
   <head>
@@ -409,8 +407,9 @@
         <div class="probootstrap-copyright">
           <div class="container">
             <div class="row">
+             <div class="row">
               <div class="col-md-8 text-left">
-                <p>&copy; 2017 <a href="https://probootstrap.com/">ProBootstrap:Enlight</a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
+                <p>&copy; 2017 All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://horitio.com/">Horitio</a></p>
               </div>
               <div class="col-md-4 probootstrap-back-to-top">
                 <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
